# weekly-slideshow-engine

./: .gitignore  BGM_MIXING_ANALYSIS.py  CONCAT_ANALYSIS.py  FFMPEG_OPTIMIZATION.md  FFMPEG_OPTIMIZATION_GUIDE.py  OPTIMIZATION_SUMMARY.py  README.md  TEST_AND_DEBUG_REPORT.md  TEST_REPORT.py  get_error.py  pyproject.toml  run_tests.py  settings.sample.yml  test_comprehensive.py  test_debug.py  test_ffmpeg_optimization.py  test_hw_default.py  test_timeout_check.py
.github/workflows/: ci.yml
src/video_engine/: __init__.py  __main__.py  app.py  cli.py  config.py  presets.py  render.py  scan.py  timeline.py  utils.py
tests/: conftest.py  test_cli_smoke.py  test_config.py  test_e2e_cli.py  test_presets.py  test_render_bgm_smoke.py  test_render_concat_smoke.py  test_render_mixed_portrait_video_photo_smoke.py  test_render_photo_portrait_smoke.py  test_render_preserve_video_smoke.py  test_render_transition_smoke.py  test_render_video_frame_size_smoke.py  test_render_video_smoke.py  test_scan.py  test_timeline.py  test_utils.py
video_engine/: __main__.py
